Switch css-loader to raw-loader

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "bugs": {
     "url": "https://github.com/shakacode/bootstrap-sass-loader/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "raw-loader": "^0.5.1"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
